test/with8.slq

def main(){
	with{ }do{
		return 2; /// error
		x:=0;
	}
	return 0;
}
